[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://fonts/arlrdbd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Female.gd" type="Script" id=3]
[ext_resource path="res://scripts/Male.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
resource_name = "Fade in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Partner Selection:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Male:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("or:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Female:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Text Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 448.0
margin_top = 320.0
margin_right = 616.0
margin_bottom = 392.0
custom_fonts/normal_font = SubResource( 4 )
text = "MALE"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
mouse_over = Color( 0.101961, 0, 1, 1 )
mouse_out = Color( 1, 1, 1, 1 )

[node name="Female" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 680.0
margin_top = 320.0
margin_right = 920.0
margin_bottom = 392.0
custom_fonts/normal_font = SubResource( 6 )
text = "FEMALE"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
mouse_over = Color( 1, 0, 0.984314, 1 )
mouse_out = Color( 1, 1, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
"anims/Fade in" = SubResource( 1 )
"anims/Text Fade Out" = SubResource( 2 )

[node name="Partner Selection" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 56.0
margin_right = 256.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 3 )
text = "PREFERRED PARTNER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="or" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 5 )
text = "or"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_mouse_exited"]
